--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 	// Spring Boot dependencies
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	// Spring Kafka dependencies
 	implementation 'org.springframework.kafka:spring-kafka'
